Weather-Kafka/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/weather-kafka-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - image: weatherkafka:4
          name: api
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret-volume
          ports:
            - containerPort: 8000
          resources: {}
      volumes:
        - name: secret-volume
          secret:
            secretName: certificate
      restartPolicy: Always
status: {}
