Weather-Kafka/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  type: NodePort
  ports:
    - name: "5001"
      port: 5001
      targetPort: 8000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
