Weather-Kafka/redissvc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    io.kompose.service: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
